# PerMaculture

./: README.md  compose_update.sh  docker-compose.yml  init_db.sql  run.sh
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
backend/src/: lib.rs  main.rs  models.rs  schema.rs
backend/src/handlers/: bugs.rs  keepers.rs  mod.rs  plants.rs  trees.rs
backend/src/models/: bugs.rs  interactions.rs  keepers.rs  mod.rs  plants.rs  trees.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: config.ts  index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/arbres/: arbes.component.html  arbes.component.scss  arbes.component.ts
frontend/src/app/body/: body.component.scss  body.component.ts
frontend/src/app/card-meteo/: card-meteo.component.html  card-meteo.component.scss  card-meteo.component.spec.ts  card-meteo.component.ts
frontend/src/app/connexion/: connexion.component.html  connexion.component.scss  connexion.component.ts
frontend/src/app/flowers/: flowers.component.html  flowers.component.scss  flowers.component.ts
frontend/src/app/insectes/: insectes.component.html  insectes.component.scss  insectes.component.ts
frontend/src/app/models/: arbres.interface.ts  insectes.interface.ts  keeper.interface.ts  plant.interface.ts
frontend/src/app/plante-description/: plante-description.component.html  plante-description.component.scss  plante-description.component.spec.ts  plante-description.component.ts
frontend/src/app/potager/: potager.component.html  potager.component.scss  potager.component.spec.ts  potager.component.ts
frontend/src/app/radial-menu-icon/: radial-menu-icon.component.html  radial-menu-icon.component.spec.ts  (+1 more)
(+46 files in other folders)
