[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
clap = "4.1.14"
dotenvy = "0.15.7"
specs = "0.18.0"
tokio = "1.27.0"

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.diesel]
version = "2.0.3"
features = ["postgres"]

[dependencies.deadpool-diesel]
version = "0.4.1"
features = ["postgres"]
