[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-macros = "0.3.7"
bcrypt = "0.14.0"
clap = "4.1.14"
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
specs = "0.18.0"
tokio = "1.27.0"

[dependencies.chrono]
version = "0.4.24"
features = ["serde"]

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[dependencies.diesel]
version = "2.0.3"
features = ["postgres", "chrono"]

[dependencies.tower-http]
version = "0.4.0"
features = ["cors"]

[dependencies.deadpool-diesel]
version = "0.4.1"
features = ["postgres"]
