[package]
name = "plantera-api-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.4"
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.3"
features = ["diesel_postgres_pool", "postgres_pool", "postgres"]
